added restart command

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "scripts": {
     "build": "sudo docker build -t $(cat ${DOCKERHUBUSER})/$(node -p \"try { require('./package.json').name } catch(e) {}\") .",
-    "start:dev": "node ./app.js",
-    "start:prod": "sudo docker run -p 8080:8080 -d $(cat ${DOCKERHUBUSER})/$(node -p \"try { require('./package.json').name } catch(e) {}\")"
+    "dev:start": "node ./app.js",
+    "prod:start": "sudo docker run -p 8080:8080 -d --name $(node -p \"try { require('./package.json').name } catch(e) {}\") $(cat ${DOCKERHUBUSER})/$(node -p \"try { require('./package.json').name } catch(e) {}\")",
+    "prod:stop": "sudo docker stop $(node -p \"try { require('./package.json').name } catch(e) {}\")",
+    "prod:restart": "sudo docker start $(node -p \"try { require('./package.json').name } catch(e) {}\")"
   }
 }
