reordered run scripts in package

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "express": "^4.16.4"
   },
   "scripts": {
-    "build": "sudo docker build -t $(cat ${DOCKERHUBUSER})/$(node -p \"try { require('./package.json').name } catch(e) {}\") .",
     "dev:start": "node ./app.js",
+    "prod:build": "sudo docker build -t $(cat ${DOCKERHUBUSER})/$(node -p \"try { require('./package.json').name } catch(e) {}\") .",
     "prod:start": "sudo docker run -p 8080:8080 -d --name $(node -p \"try { require('./package.json').name } catch(e) {}\") $(cat ${DOCKERHUBUSER})/$(node -p \"try { require('./package.json').name } catch(e) {}\")",
     "prod:stop": "sudo docker stop $(node -p \"try { require('./package.json').name } catch(e) {}\")",
     "prod:restart": "sudo docker start $(node -p \"try { require('./package.json').name } catch(e) {}\")"
