--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "express"
   ],
   "dependencies": {
-    "express": "^4.16.4"
+    "ejs": "^3.1.6",
+    "express": "^4.16.4",
+    "mongoose": "^5.12.12"
   },
   "scripts": {
     "dev:start": "node ./app.js",
